<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfileFragment"
    android:id="@+id/profileFragment">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/profile_fragment_title"
        android:textColor="@color/purple_500"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/placeholder"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/email"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/placeholder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/phone"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profilePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/placeholder"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/genderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/sex"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profileGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/placeholder"
        android:textSize="18sp" />


</LinearLayout>